--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Will Store test assignment api",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 10000000000"
   },
   "author": "Amruta Vichare",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^7.4.3",
+    "mocha": "^9.0.0",
     "mongoose": "^5.10.7",
     "request": "^2.88.2",
     "util": "^0.12.3"
